--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,46 +12,52 @@ services:
     environment:
       - TZ=Europe/London
     network_mode: host
-    devices:
-      - /dev/dri:/dev/dri
     restart: unless-stopped
 
-  # nzbget
-  nzbget:
-    image: ghcr.io/linuxserver/nzbget
-    container_name: nzbget
-    volumes:
-      - ${CONFIG_DIR}/nzbget:/config
-      - ${MEDIA_DIR}/downloads:/downloads
+  jackett:
+    image: ghcr.io/linuxserver/jackett
+    container_name: jackett
     environment:
       - PUID=1000
       - PGID=1000
-    labels:
-      - "traefik.http.routers.nzbget.rule=Host(`nzbget.${LOCAL_DOMAIN}`)"
+      - TZ=Europe/London
+    volumes:
+      - ${CONFIG_DIR}/jackett:/config
+      - ${MEDIA_DIR}/downloads:/downloads
+    ports:
+      - 9117:9117
     restart: unless-stopped
 
-  hydra:
-    image: ghcr.io/linuxserver/nzbhydra2
-    container_name: hydra
+  transmission:
+    image: ghcr.io/linuxserver/transmission
+    container_name: transmission
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/London
     volumes:
-      - ${CONFIG_DIR}/hydra:/config
-    labels:
-      - "traefik.http.routers.nzbhydra.rule=Host(`nzbhydra.${LOCAL_DOMAIN}`)"
+      - ${CONFIG_DIR}/transmission:/config
+      - ${MEDIA_DIR}/downloads/files:/downloads
+      - ${MEDIA_DIR}/downloads/watch:/watch
+    ports:
+      - 9091:9091
+      - 51413:51413
+      - 51413:51413/udp
     restart: unless-stopped
 
   # sonarr
   sonarr:
-    image: ghcr.io/linuxserver/sonarr:develop
+    image: ghcr.io/linuxserver/sonarr
     container_name: sonarr
     volumes:
       - ${CONFIG_DIR}/sonarr:/config
       - ${MEDIA_DIR}:/media
-      - /etc/localtime:/etc/localtime:ro
     environment:
       - PUID=1000
       - PGID=1000
-    labels:
-      - "traefik.http.routers.sonarr.rule=Host(`sonarr.${LOCAL_DOMAIN}`)"
+      - TZ=Europe/London
+    ports:
+      - 8989:8989
     restart: unless-stopped
 
   # radarr
@@ -61,19 +67,10 @@ services:
     volumes:
       - ${CONFIG_DIR}/radarr:/config
       - ${MEDIA_DIR}:/media
-      - /etc/localtime:/etc/localtime:ro
     environment:
       - PUID=1000
       - PGID=1000
-    labels:
-      - "traefik.http.routers.radarr.rule=Host(`radarr.${LOCAL_DOMAIN}`)"
-    restart: unless-stopped
-
-  overseer:
-    image: ghcr.io/sct/overseerr
-    container_name: overseerr
-    volumes:
-      - ${CONFIG_DIR}:/app/config
-    labels:
-      - "traefik.http.routers.overseerr.rule=Host(`overseerr.${LOCAL_DOMAIN}`)"
+      - TZ=Europe/London
+    ports:
+      - 7878:7878
     restart: unless-stopped
