--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "2.3"
 services:
   # plex media server
   plex:
-    image: plexinc/pms-docker:plexpass
+    image: plexinc/pms-docker
     container_name: plex
     volumes:
       - ${CONFIG_DIR}/plex:/config
