specify ports exactly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,8 @@ services:
       - ${MEDIA_DIR}/downloads/watch:/watch
     ports:
       - "9091:9091"
-      - "51413:51413"
+      - "51413:51413/tcp"
+      - "51413:51413/udp"
     restart: unless-stopped
 
   # sonarr
