--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
       - "9091:9091"
       - "55702:51413/tcp"
       - "55702:51413/udp"
+    dns:
+      - 8.8.8.8
     restart: unless-stopped
 
   # sonarr
