--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,28 @@
 version: "2.3"
 
 services:
-  jackett:
-    image: ghcr.io/linuxserver/jackett
-    container_name: jackett
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Europe/London
-    ports:
-      - "9117:9117"
+  nzbget:
+    image: ghcr.io/linuxserver/nzbget
+    container_name: nzbget
     volumes:
-      - ${CONFIG_DIR}/jackett:/config
+      - ${CONFIG_DIR}/nzbget:/config
       - ${MEDIA_DIR}/downloads:/downloads
-    restart: unless-stopped
-
-  transmission:
-    image: ghcr.io/linuxserver/transmission
-    container_name: transmission
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=Europe/London
-    volumes:
-      - ${CONFIG_DIR}/transmission:/config
-      - ${MEDIA_DIR}/downloads/files:/downloads
-      - ${MEDIA_DIR}/downloads/watch:/watch
     ports:
-      - "9091:9091"
-      - "58623:58623/tcp"
-      - "58623:58623/udp"
-    dns: "8.8.8.8"
+      - "6789:6789"
     restart: unless-stopped
 
-  # sonarr
+  hydra:
+    image: ghcr.io/linuxserver/nzbhydra2
+    container_name: hydra
+    volumes:
+      - ${CONFIG_DIR}/hydra:/config
+    ports:
+      - "5076:5076"
+    restart: unless-stopped
+
   sonarr:
     image: ghcr.io/linuxserver/sonarr
     container_name: sonarr
@@ -48,7 +37,6 @@ services:
       - "8989:8989"
     restart: unless-stopped
 
-  # radarr
   radarr:
     image: ghcr.io/linuxserver/radarr:nightly
     container_name: radarr
